Update code to use new API functions to redirect IO